--- a/aula1106/amigos.html
+++ b/aula1106/amigos.html
@@ -57,7 +57,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa1</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends1.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa2</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends2.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -77,7 +77,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa3</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends3.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa4</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends4.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -100,7 +100,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa5</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends5.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa6</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends6.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -123,7 +123,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa7</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends7.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -133,7 +133,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa8</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends8.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -143,7 +143,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa9</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends9.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -156,7 +156,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa10</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends10.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -166,7 +166,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa11</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends11.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -176,7 +176,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa12</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends12.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -189,7 +189,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa13</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends13.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -199,7 +199,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa14</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends14.png" class="img-amigos">
             </div>
           </div>
         </div>
@@ -209,7 +209,7 @@
               <a href="#"><small class="descricao-amigos"><b>Pessoa15</b></small></a>
             </div>
             <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
+              <img src="images/img-friends15.png" class="img-amigos">
             </div>
           </div>
         </div>
