--- a/aula1106/fotos.html
+++ b/aula1106/fotos.html
@@ -54,28 +54,28 @@
         <div class="col-lg-3">
           <div class="card-fotos card-fotos-inicial">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos1.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos card-fotos-inicial">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos2.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos card-fotos-inicial">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos3.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos card-fotos-inicial">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos4.png" class="img-foto">
             </div>
           </div>
         </div>
@@ -85,59 +85,28 @@
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos5.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos6.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos7.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-3">
-          <div class="card-fotos">
-            <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="card-fotos">
-            <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="card-fotos">
-            <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="card-fotos">
-            <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos8.png" class="img-foto">
             </div>
           </div>
         </div>
@@ -147,28 +116,28 @@
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos9.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos10.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos11.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos12.png" class="img-foto">
             </div>
           </div>
         </div>
@@ -178,28 +147,59 @@
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos13.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos14.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos15.png" class="img-foto">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card-fotos">
             <div class="img-card-foto">
-              <img src="images/img-test-fotos.jpg" class="img-foto">
+              <img src="images/img-fotos16.png" class="img-foto">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-3">
+          <div class="card-fotos">
+            <div class="img-card-foto">
+              <img src="images/img-fotos17.png" class="img-foto">
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card-fotos">
+            <div class="img-card-foto">
+              <img src="images/img-fotos18.png" class="img-foto">
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card-fotos">
+            <div class="img-card-foto">
+              <img src="images/img-fotos19.png" class="img-foto">
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card-fotos">
+            <div class="img-card-foto">
+              <img src="images/img-fotos20.png" class="img-foto">
             </div>
           </div>
         </div>
